[workspace]
members = [
	"entity",
	"migration",
	"backend"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
description = "Your personal finance manager"
license = "AGPL-3"
repository = "https://github.com/financrr/backend"
homepage = "https://github.com/financrr/backend"
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"

[workspace.lints.clippy]
# Restriction
absolute_paths = "warn"
arithmetic_side_effects = "warn"

# Pedantic
wildcard-imports = "deny"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"

# Nursey
cognitive_complexity = "deny"
use_self = "warn"

[workspace.dependencies]
# Actix
actix-identity = "0.7.0"

# Serialization/Deserialization
serde = { version = "1.0.196", features = ["derive"] }

# ORM
sea-orm = { version = "0.12.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }

# Async runtime
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }

# Utils
log = "0.4.20"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
