[workspace]
members = [
    "entity",
    "migration",
    "backend"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
description = "Your personal finance manager"
license = "AGPL-3"
repository = "https://github.com/financrr/backend"
homepage = "https://github.com/financrr/backend"
readme = "README.md"
edition = "2021"
rust-version = "1.76.0"

[workspace.lints.clippy]
# Restriction
absolute_paths = "warn"

# Pedantic
wildcard-imports = "deny"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"

# Nursey
cognitive_complexity = "deny"
use_self = "warn"

[workspace.dependencies]
# Serialization/Deserialization
serde = { version = "1.0.197", features = ["derive"] }

# ORM
sea-orm = { version = "1.0.0-rc.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }

# Date/Time
time = { version = "0.3.34", features = ["serde-human-readable", "local-offset"] }

# Logging
log = "0.4.20"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
