[workspace]
members = [
    "entity",
    "migration",
    "backend",
    "utility",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
description = "Your personal finance manager"
license = "AGPL-3"
repository = "https://github.com/financrr/backend"
homepage = "https://github.com/financrr/backend"
readme = "README.md"
edition = "2021"
rust-version = "1.78.0"

[workspace.lints.clippy]
# Restriction
absolute_paths = "deny"
unwrap_used = "deny"
expect_used = "deny"

# Pedantic
wildcard-imports = "deny"
cloned_instead_of_copied = "deny"
explicit_iter_loop = "deny"
unnecessary_wraps = "deny"
unused_self = "deny"

# Nursey
cognitive_complexity = "deny"
use_self = "deny"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "parking_lot"] }

# Serialization/Deserialization
serde = { version = "1.0.203", features = ["derive"] }

# ORM
sea-orm = { version = "1.0.0-rc.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }

# Date/Time
time = { version = "0.3.36", features = ["serde", "serde-human-readable", "local-offset"] }
chrono = { version = "0.4.38", features = ["clock"] }

# Error handling
thiserror = "1.0.61"

# Logging
tracing = "0.1.40"

# Utilities
utility = { path = "utility" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
