[workspace]
members = [
    "entity",
    "migration",
    "backend",
    "utility",
]
default-members = [
    "backend"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
description = "Your personal finance manager"
license = "AGPL-3"
repository = "https://github.com/financrr/backend"
homepage = "https://github.com/financrr/backend"
readme = "README.md"
edition = "2021"
rust-version = "1.80.0"

[workspace.lints.rust]
# Forbid
unsafe_code = "forbid"
non_ascii_idents = "forbid"

[workspace.lints.clippy]
# Restriction
absolute_paths = "warn"
unwrap_used = "warn"

# Pedantic
wildcard-imports = "deny"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"

# Nursey
cognitive_complexity = "deny"
use_self = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "parking_lot"] }

# OpenApi
utoipa = { version = "5.0.0-alpha.2", features = ["actix_extras", "openapi_extensions", "time", "preserve_order", "preserve_path_order", "non_strict_integers"] }

# Serialization/Deserialization
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

# ORM
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }

# Date/Time
time = { version = "0.3.36", features = ["serde-human-readable", "local-offset"] }
chrono = { version = "0.4.38", features = ["clock"] }

# Error handling
thiserror = "1.0.63"

# Logging
tracing = "0.1.40"

# Utilities
dotenvy = "0.15.7"
utility = { path = "utility" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
