[package]
name = "entity"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["rust-argon2"]

[dependencies]
# Encryption
rand = "0.8.5"
rust-argon2 = "2.1.0"

# Error handling
thiserror = "1.0.56"

# Workspace
sea-orm.workspace = true

# Utils
chrono = "0.4.32"
