[package]
name = "entity"
version.workspace = true
edition.workspace = true

[lints.clippy]
wildcard_imports = "allow"

[package.metadata.cargo-machete]
ignored = ["rust-argon2"]

[dependencies]
# Actix
actix-identity.workspace = true

# ORM
sea-orm.workspace = true
sea-query = "0.30.7"

# Serialization/Deserialization
serde.workspace = true

# Encryption
rand = "0.8.5"
rust-argon2 = "2.1.0"

# Error handling
thiserror = "1.0.56"

# Utils
chrono = "0.4.33"
