[package]
name = "migration"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Async runtime
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

# Entity
entity = { path = "../entity" }

# Sea-orm
sea-orm.workspace = true
sea-orm-migration = "1.0.0-rc.1"
log.workspace = true

# Date/Time
time.workspace = true
