[package]
name = "migration"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Async runtime
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

# Entity
entity = { path = "../entity" }

# Sea-orm
sea-orm.workspace = true
sea-orm-migration = "0.12.14"
log.workspace = true

# Utils
chrono = "0.4.34"
