[package]
name = "financrr-backend"
description = "Your personal finance manager"
version = "0.1.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
license = "AGPL-3"
repository = "https://github.com/financrr/backend"
homepage = "https://github.com/financrr/backend"
readme = "README.md"
edition = "2021"
rust-version = "1.81.0"

[lints.rust]
# Forbid
unsafe_code = "forbid"
non_ascii_idents = "forbid"

[lints.clippy]
# Restriction
absolute_paths = "warn"
unwrap_used = "warn"

# Pedantic
wildcard-imports = "deny"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"

# Nursey
cognitive_complexity = "deny"
use_self = "warn"

[dependencies]
# Async runtime
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "parking_lot"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
