[package]
name = "backend"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-web = { version = "4.7.0", features = ["rustls-0_23"] }
actix-cors = "0.7.0"
actix-limitation = "0.5.1"
actix-web-prom = "0.8.0"

# Async runtime/Event handeling
tokio.workspace = true

# Scheduling
deschuler = "0.4.0"
croner = "2.0.4"

# Validation
validator = { version = "0.18.1", features = ["derive"] }
actix-web-validator5 = "1.0.0"
iban = "0.1.7"

# Database / ORM
sea-orm.workspace = true
entity = { path = "../entity" }
migration = { path = "../migration" }
# Redis
redis = {  version = "0.25.4", features = ["aio", "tokio-comp"] }

# Serialization and deserialization
serde.workspace = true
serde_json = "1.0.117"

# Generating openapi spec
utoipa = { version = "4.2.3", features = ["actix_extras", "openapi_extensions", "time", "preserve_order", "preserve_path_order", "non_strict_integers"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web", "debug-embed", "reqwest"] }
utoipauto = { version = "0.1.11", features = ["generic_full_path"] }

# Logging
tracing.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt"] }
tracing-appender = "0.2.3"

# Date/Time
time.workspace = true
chrono = { version = "0.4.38", features = ["clock"]}

# Utils
dotenvy = "0.15.7"
derive_more = { version = "1.0.0-beta.6", features = ["display", "error"] }
regex = { version = "1.10.5", features = ["std", "perf", "unicode"] }
itertools = "0.13.0"
bitflags = {  version = "2.5.0", features = ["std", "serde"] }
paste = "1.0.15"

# Future Utils
futures-util = "0.3.30"

# Async utils
once_cell = "1.19.0"

# Security utils
uuid = { version = "1.8.0", features = ["v4"] }
