[package]
name = "entity"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["rust-argon2"]

[dependencies]
# ORM
sea-orm.workspace = true

# Serialization/Deserialization
serde.workspace = true

# Encryption
rand = "0.8.5"
rust-argon2 = "2.1.0"

# Error handling
thiserror.workspace = true

# Date/Time
time.workspace = true

# Utilities
utility.workspace = true
