[package]
name = "utility"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bench]]
name = "snowflake"
harness = false

[dependencies]
# Date/Time
time.workspace = true
chrono.workspace = true

# Serialization and deserialization
serde.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5.1"
